--- a/index.css
+++ b/index.css
@@ -21,9 +21,9 @@ body {
     margin: 0.5rem;
 }
 .heading {
-    font-size: 5rem;
+    font-size: 10rem;
     margin: 1.5rem;
-    font-weight: 500;
+    font-weight: 800;
 }
 @media screen and (max-width:540px) {
     .heading {
@@ -31,7 +31,8 @@ body {
     }
 }
 .description {
-    font-style: oblique;
+    font-style:italic;
+    font-weight: 600;
     text-align: center;
 }
 .search_wrapper {
@@ -80,8 +81,8 @@ body {
     display: flex;
     align-items: center;
     align-self: flex-end;
-    color: white;
-    background-color: #3F51B5;
+    color: black;
+    background-color: pink;
     border-radius: 0.25rem;
     border: none;
     padding: 0.5rem 0.75rem;
